--- a/mastercss/swagger_snippet.css
+++ b/mastercss/swagger_snippet.css
@@ -1,2 +1,17 @@
-#EMPTY {
+#DIV_240 {
+  height: calc(100% - 1em) !important;
+}
+
+#SECTION_241,
+#DIV_242,
+#DIV_243,
+#DIV_244,
+#SECTION_245,
+#DIV_246,
+#SPAN_247,
+#DIV_248,
+#DIV_249,
+#SPAN_250,
+#DIV_1 {
+  height: 100% !important;
 }
